--- a/index.html
+++ b/index.html
@@ -141,37 +141,37 @@
         <button class="close-btn" id="close-project1">&times;</button>
         <h2>Projet 1 - Détails</h2>
         <p>Description du projet 1...</p>
-        <img src="image/projets/P1.jpg" alt="Détails du projet 1">
+        <img class="project-detail-img" src="image/projets/P1.jpg" alt="Détails du projet 1">
       </div>
       <div class="project-detail" id="project2-detail">
         <button class="close-btn" id="close-project1">&times;</button>
         <h2>Projet 2 - Détails</h2>
         <p>Description du projet 1...</p>
-        <img src="image/projets/P2.jpg" alt="Détails du projet 2">
+        <img class="project-detail-img" src="image/projets/P2.jpg" alt="Détails du projet 2">
       </div>
       <div class="project-detail" id="project3-detail">
         <button class="close-btn" id="close-project1">&times;</button>
         <h2>Projet 3 - Détails</h2>
         <p>Description du projet 1...</p>
-        <img src="image/projets/P3.png" alt="Détails du projet 3">
+        <img class="project-detail-img" src="image/projets/P3.png" alt="Détails du projet 3">
       </div>
       <div class="project-detail" id="project4-detail">
         <button class="close-btn" id="close-project1">&times;</button>
         <h2>Projet 4 - Détails</h2>
         <p>Description du projet 1...</p>
-        <img src="image/projets/P4.jpg" alt="Détails du projet 4">
+        <img class="project-detail-img" src="image/projets/P4.jpg" alt="Détails du projet 4">
       </div>
       <div class="project-detail" id="project5-detail">
         <button class="close-btn" id="close-project1">&times;</button>
         <h2>Projet 5 - Détails</h2>
         <p>Description du projet 1...</p>
-        <img src="image/projets/P5.png" alt="Détails du projet 5">
+        <img class="project-detail-img" src="image/projets/P5.png" alt="Détails du projet 5">
       </div>
       <div class="project-detail" id="project6-detail">
         <button class="close-btn" id="close-project1">&times;</button>
         <h2>Projet 6 - Détails</h2>
         <p>Description du projet 1...</p>
-        <img src="image/projets/P6.png" alt="Détails du projet 6">
+        <img class="project-detail-img" src="image/projets/P6.png" alt="Détails du projet 6">
       </div>
 
     <script>
